# LiteChatServer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/connection/: client_session.cpp  client_session.h  server.cpp  server.h
src/sql/: SQLCommand1.sql  SQLCommand2.sql  init.sql
src/system/: db_manager.cpp  db_manager.h  exception_handler.cpp  exception_handler.h  friend_dao.cpp  friend_dao.h  friend_manager.cpp  friend_manager.h  message_dao.cpp  message_dao.h  message_manager.cpp  message_manager.h  server_logger.cpp  server_logger.h  server_monitor.cpp  server_monitor.h  session_manager.cpp  session_manager.h  thread_pool.cpp  thread_pool.h  user_dao.cpp  user_dao.h  user_manager.cpp  user_manager.h
